Correction to index variable used in section 5.4
Correction agrees index variable to chap05.ipynb.

--- a/book/book.tex
+++ b/book/book.tex
@@ -2022,7 +2022,7 @@ results = TimeSeries()
 We can set the first value in the new \py{TimeSeries} by copying the first value from \py{census}:
 
 \begin{python}
-results[t_0] = census[p_0]
+results[t_0] = census[t_0]
 \end{python}
 
 Then we set the rest of the values by simulating annual growth:
