--- a/code/soln/chap01soln.ipynb
+++ b/code/soln/chap01soln.ipynb
@@ -158,7 +158,7 @@
        "meter"
       ],
       "text/latex": [
-       "$meter$"
+       "$\\mathrm{meter}$"
       ],
       "text/plain": [
        "<Unit('meter')>"
@@ -184,7 +184,7 @@
        "second"
       ],
       "text/latex": [
-       "$second$"
+       "$\\mathrm{second}$"
       ],
       "text/plain": [
        "<Unit('second')>"
@@ -231,10 +231,10 @@
        "9.8 meter/second<sup>2</sup>"
       ],
       "text/latex": [
-       "$9.8 \\frac{meter}{second^{2}}$"
+       "$9.8\\ \\frac{\\mathrm{meter}}{\\mathrm{second}^{2}}$"
       ],
       "text/plain": [
-       "<Quantity(9.8, 'meter / second ** 2')>"
+       "9.8 <Unit('meter / second ** 2')>"
       ]
      },
      "execution_count": 4,
@@ -264,10 +264,10 @@
        "4 second"
       ],
       "text/latex": [
-       "$4 second$"
+       "$4\\ \\mathrm{second}$"
       ],
       "text/plain": [
-       "<Quantity(4, 'second')>"
+       "4 <Unit('second')>"
       ]
      },
      "execution_count": 5,
@@ -297,10 +297,10 @@
        "78.4 meter"
       ],
       "text/latex": [
-       "$78.4 meter$"
+       "$78.4\\ \\mathrm{meter}$"
       ],
       "text/plain": [
-       "<Quantity(78.4, 'meter')>"
+       "78.4 <Unit('meter')>"
       ]
      },
      "execution_count": 6,
@@ -330,10 +330,10 @@
        "39.2 meter/second"
       ],
       "text/latex": [
-       "$39.2 \\frac{meter}{second}$"
+       "$39.2\\ \\frac{\\mathrm{meter}}{\\mathrm{second}}$"
       ],
       "text/plain": [
-       "<Quantity(39.2, 'meter / second')>"
+       "39.2 <Unit('meter / second')>"
       ]
      },
      "execution_count": 7,
@@ -402,10 +402,10 @@
        "381 meter"
       ],
       "text/latex": [
-       "$381 meter$"
+       "$381\\ \\mathrm{meter}$"
       ],
       "text/plain": [
-       "<Quantity(381, 'meter')>"
+       "381 <Unit('meter')>"
       ]
      },
      "execution_count": 9,
@@ -439,10 +439,10 @@
        "8.817885349720552 second"
       ],
       "text/latex": [
-       "$8.817885349720552 second$"
+       "$8.817885349720552\\ \\mathrm{second}$"
       ],
       "text/plain": [
-       "<Quantity(8.817885349720552, 'second')>"
+       "8.817885349720552 <Unit('second')>"
       ]
      },
      "execution_count": 10,
@@ -474,10 +474,10 @@
        "86.41527642726142 meter/second"
       ],
       "text/latex": [
-       "$86.41527642726142 \\frac{meter}{second}$"
+       "$86.41527642726142\\ \\frac{\\mathrm{meter}}{\\mathrm{second}}$"
       ],
       "text/plain": [
-       "<Quantity(86.41527642726142, 'meter / second')>"
+       "86.41527642726142 <Unit('meter / second')>"
       ]
      },
      "execution_count": 11,
@@ -507,7 +507,7 @@
        "hour"
       ],
       "text/latex": [
-       "$hour$"
+       "$\\mathrm{hour}$"
       ],
       "text/plain": [
        "<Unit('hour')>"
@@ -534,10 +534,10 @@
        "193.30546802805438 mile/hour"
       ],
       "text/latex": [
-       "$193.30546802805438 \\frac{mile}{hour}$"
+       "$193.30546802805438\\ \\frac{\\mathrm{mile}}{\\mathrm{hour}}$"
       ],
       "text/plain": [
-       "<Quantity(193.30546802805438, 'mile / hour')>"
+       "193.30546802805438 <Unit('mile / hour')>"
       ]
      },
      "execution_count": 13,
@@ -571,10 +571,10 @@
        "384.048 meter"
       ],
       "text/latex": [
-       "$384.048 meter$"
+       "$384.048\\ \\mathrm{meter}$"
       ],
       "text/plain": [
-       "<Quantity(384.048, 'meter')>"
+       "384.048 <Unit('meter')>"
       ]
      },
      "execution_count": 14,
@@ -602,10 +602,10 @@
        "1260.0 foot"
       ],
       "text/latex": [
-       "$1260.0 foot$"
+       "$1260.0\\ \\mathrm{foot}$"
       ],
       "text/plain": [
-       "<Quantity(1260.0, 'foot')>"
+       "1260.0 <Unit('foot')>"
       ]
      },
      "execution_count": 15,
@@ -646,10 +646,10 @@
        "18.0 meter/second"
       ],
       "text/latex": [
-       "$18.0 \\frac{meter}{second}$"
+       "$18.0\\ \\frac{\\mathrm{meter}}{\\mathrm{second}}$"
       ],
       "text/plain": [
-       "<Quantity(18.0, 'meter / second')>"
+       "18.0 <Unit('meter / second')>"
       ]
      },
      "execution_count": 16,
@@ -758,6 +758,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "0.5\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for p in linspace(0, 1, 3):\n",
+    "    print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -780,7 +800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
