Working on version 3 notebooks

--- a/code/soln/duck_soln.ipynb
+++ b/code/soln/duck_soln.ipynb
@@ -43,6 +43,33 @@
     {
      "data": {
       "text/html": [
+       "centimeter"
+      ],
+      "text/latex": [
+       "$\\mathrm{centimeter}$"
+      ],
+      "text/plain": [
+       "<Unit('centimeter')>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = UNITS.g\n",
+    "cm = UNITS.cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
        "<div>\n",
        "<style scoped>\n",
        "    .dataframe tbody tr th:only-of-type {\n",
@@ -67,76 +94,75 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>density_duck</th>\n",
-       "      <td>0.3</td>\n",
+       "      <td>0.3 gram / centimeter ** 3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>density_water</th>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1.0 gram / centimeter ** 3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>r</th>\n",
-       "      <td>5.0</td>\n",
+       "      <td>5 centimeter</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "density_duck     0.3\n",
-       "density_water    1.0\n",
-       "r                5.0\n",
-       "dtype: float64"
+       "density_duck     0.3 gram / centimeter ** 3\n",
+       "density_water    1.0 gram / centimeter ** 3\n",
+       "r                              5 centimeter\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "system = System (\n",
-    "    density_duck = 0.3,  # g / cm^3  \n",
-    "    density_water = 1,   # g / cm^3\n",
-    "    r = 5,     # cm\n",
+    "    density_duck = 0.3 * g/cm**3,\n",
+    "    density_water = 1  * g/cm**3,\n",
+    "    r = 5 * cm,\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def error_func(d, system):\n",
-    "    print(d)\n",
-    "    unpack(system)\n",
-    "    \n",
-    "    volume_duck = 4 / 3 * pi * r**3\n",
-    "    mass_duck = volume_duck * density_duck\n",
-    "    volume_water = pi / 3 * (3 * r * d**2 - d**3)\n",
-    "    mass_water = volume_water * density_water\n",
-    "    return mass_duck - mass_water"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def error_func(d, system):\n",
+    "    # in order to work with root_scale, we have\n",
+    "    # to accept input that does not have units\n",
+    "    d = d * cm\n",
+    "    r = system.r\n",
+    "    \n",
+    "    volume_duck = 4 / 3 * pi * r**3\n",
+    "    mass_duck = volume_duck * system.density_duck\n",
+    "\n",
+    "    volume_water = pi / 3 * (3 * r * d**2 - d**3)\n",
+    "    mass_water = volume_water * system.density_water\n",
+    "\n",
+    "    # and return an error that does not have units\n",
+    "    error = mass_duck - mass_water\n",
+    "    return magnitude(error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "43.982297150257125"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,38 +173,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "[3]\n",
-      "[3.]\n",
-      "[3.]\n",
-      "[3.00000004]\n",
-      "[3.66666666]\n",
-      "[3.63105175]\n",
-      "[3.63257187]\n",
-      "[3.63257491]\n",
-      "[3.63257491]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array([3.63257491])"
+       "-27.227136331111524"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fsolve(error_func, 3, system)"
+    "error_func(4, system)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "      converged: True\n",
+       "           flag: 'converged'\n",
+       " function_calls: 7\n",
+       "     iterations: 6\n",
+       "           root: 3.6325749109061265"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = root_scalar(error_func, [3., 4.], system)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "3.6325749109061265 centimeter"
+      ],
+      "text/latex": [
+       "$3.6325749109061265\\ \\mathrm{centimeter}$"
+      ],
+      "text/plain": [
+       "3.6325749109061265 <Unit('centimeter')>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.root * cm"
    ]
   }
  ],
@@ -198,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
