--- a/code/soln/test_deg2rad.ipynb
+++ b/code/soln/test_deg2rad.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "0.7853981633974483"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -44,13 +44,13 @@
        "0.7853981633974483 radian"
       ],
       "text/latex": [
-       "$0.7853981633974483 radian$"
+       "$0.7853981633974483\\ \\mathrm{radian}$"
       ],
       "text/plain": [
-       "<Quantity(0.7853981633974483, 'radian')>"
+       "0.7853981633974483 <Unit('radian')>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,13 +71,13 @@
        "0.785 radian"
       ],
       "text/latex": [
-       "$0.785 radian$"
+       "$0.785\\ \\mathrm{radian}$"
       ],
       "text/plain": [
-       "<Quantity(0.785, 'radian')>"
+       "0.785 <Unit('radian')>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,13 +98,13 @@
        "45.0 radian"
       ],
       "text/latex": [
-       "$45.0 radian$"
+       "$45.0\\ \\mathrm{radian}$"
       ],
       "text/plain": [
-       "<Quantity(45.0, 'radian')>"
+       "45.0 <Unit('radian')>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
